videoconverter refactor